# portal

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.md  README.rst  docker-compose.debug.yml  docker-compose.yml  local.yml  manage.py  production.yml  pyproject.toml
.circleci/: config.yml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: pull_request_template.md
.github/workflows/: ci.yaml  deployment.yml  portal-tests.yml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  settings.py  test.py
deploy/ldsa-portal/: Chart.yaml  values-dev.yaml  values.yaml
deployment/: django-deployment.yaml  django-ingress.yaml  django-service.yaml  postgres-backups-persistentvolume.yaml  postgres-backups-persistentvolumeclaim.yaml  postgres-data-persistentvolume.yaml  postgres-data-persistentvolumeclaim.yaml  postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml
deployment/clusterissuers/: letsencrypt-prod.yaml  letsencrypt-staging.yaml
docker/local/: Dockerfile
docker/production/: start
docs/: Makefile  administration.rst  backup.rst  conf.py  deploy.rst  hackathon_02.rst  index.rst  install.rst  logs.rst  make.bat  running.rst  setup.rst  structure.rst  tests.rst
docs/source/: administration.rst  backup.rst  conf.py  deploy.rst  hackathon_02.rst  index.rst  logs.rst  resetdb.rst  running.rst  setup.rst  structure.rst  tests.rst
example_datasets/: X_test_1.csv  X_test_2.csv  y_test_2.csv  y_train.csv
fixtures/: initial.yaml
portal/: .coveragerc  Dockerfile  README.md  __init__.py  ci.env  conftest.py  docker-compose.yml  gulpfile.js  interface.py  local.env  manage.py  package.json  pyproject.toml
portal/academy/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py  views_test.py
portal/admissions/: apps.py  context_processors.py  domain.py  emails.py  urls.py
portal/anymail_elasticmail/: elasticmail.py  script.sh  smtp.py
portal/applications/: admin.py  domain.py  models.py
portal/candidate/: apps.py  domain.py  helpers.py  urls.py  views.py
portal/capstone/: admin.py  apps.py  forms.py  models.py  simulator.py  urls.py  views.py
portal/config/: urls.py  wsgi.py
portal/email_client/: local.py
portal/example_datasets/: X_train.csv  y_test_1.csv
portal/fixtures/: initial.yaml
requirements/: base.in  base.txt  local.in  local.txt  production.in  production.txt
scripts/: add_app.py  capstone_scoring.py  hackthon6_scoring.py  load_new_data.py  stats.py  student_stats.py
secrets/: .gitignore  aws.enc  decrypt.sh  django.secrets.enc  encypt.sh  kubeconfig.dev.enc  kubeconfig.prod.enc
terraform/: main.tf  terraform.tfstate  terraform.tfstate.backup
(+424 files in other folders)
